--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,7 @@ along with semanticcms-section-bom.  If not, see <http://www.gnu.org/licenses />
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
-				<groupId>com.semanticcms</groupId><artifactId>semanticcms-section-all</artifactId><version>1.3.0-SNAPSHOT</version>
+				<groupId>com.semanticcms</groupId><artifactId>semanticcms-section-all</artifactId><version>1.3.0-validation-SNAPSHOT</version>
 				<type>pom</type>
 			</dependency>
 			<dependency>
