--- a/pom.xml
+++ b/pom.xml
@@ -76,10 +76,10 @@ along with semanticcms-section-bom.  If not, see <http://www.gnu.org/licenses />
 				<scope>import</scope>
 			</dependency>
 			<dependency>
-				<groupId>com.semanticcms</groupId><artifactId>semanticcms-section-taglib</artifactId><version>1.6.0-SNAPSHOT</version>
+				<groupId>com.semanticcms</groupId><artifactId>semanticcms-section-taglib</artifactId><version>1.6.0-POST-SNAPSHOT</version>
 			</dependency>
 			<dependency>
-				<groupId>com.semanticcms</groupId><artifactId>semanticcms-section-taglib</artifactId><version>1.6.0-SNAPSHOT</version>
+				<groupId>com.semanticcms</groupId><artifactId>semanticcms-section-taglib</artifactId><version>1.6.0-POST-SNAPSHOT</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
