--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@ along with semanticcms-section-bom.  If not, see <http://www.gnu.org/licenses />
 		<relativePath>../../parent/pom.xml</relativePath>
 	</parent>
 
-	<groupId>com.semanticcms</groupId><artifactId>semanticcms-section-bom</artifactId><version>1.4.0</version>
+	<groupId>com.semanticcms</groupId><artifactId>semanticcms-section-bom</artifactId><version>1.4.0-POST-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<name>SemanticCMS Section BOM</name>
@@ -42,7 +42,7 @@ along with semanticcms-section-bom.  If not, see <http://www.gnu.org/licenses />
 		<connection>scm:git:git://github.com/aoindustries/${project.artifactId}.git</connection>
 		<developerConnection>scm:git:git@github.com:aoindustries/${project.artifactId}.git</developerConnection>
 		<url>https://github.com/aoindustries/${project.artifactId}</url>
-		<tag>semanticcms-section-bom-1.4.0</tag>
+		<tag>HEAD</tag>
 	</scm>
 
 	<dependencyManagement>
