--- a/book/pom.xml
+++ b/book/pom.xml
@@ -29,7 +29,7 @@ along with semanticcms-section-bom.  If not, see <http://www.gnu.org/licenses />
 		<relativePath>../../../parent/pom.xml</relativePath>
 	</parent>
 
-	<groupId>com.semanticcms</groupId><artifactId>semanticcms-section-bom-book</artifactId><version>1.4.0-SNAPSHOT</version>
+	<groupId>com.semanticcms</groupId><artifactId>semanticcms-section-bom-book</artifactId><version>1.4.0</version>
 	<packaging>bundle</packaging>
 
 	<properties>
@@ -55,7 +55,7 @@ along with semanticcms-section-bom.  If not, see <http://www.gnu.org/licenses />
 		<connection>scm:git:git://github.com/aoindustries/${documented.artifactId}.git</connection>
 		<developerConnection>scm:git:git@github.com:aoindustries/${documented.artifactId}.git</developerConnection>
 		<url>${documented.scm.url}</url>
-		<tag>HEAD</tag>
+		<tag>semanticcms-section-bom-book-1.4.0</tag>
 	</scm>
 
 	<dependencyManagement>
