Revert "ResourceBundle lookups now use ClassLoader"
This reverts commit fe9f8a4f8aea334e1c84aea03fdacd6204678008.

--- a/pom.xml
+++ b/pom.xml
@@ -143,7 +143,7 @@ along with semanticcms-section-bom.  If not, see <http://www.gnu.org/licenses />
 			</dependency>
 			<!-- Reported by versions:display-dependency-updates -->
 			<dependency>
-				<groupId>com.aoapps</groupId><artifactId>ao-encoding</artifactId><version>5.0.3-SNAPSHOT<!-- ${POST-SNAPSHOT} --></version>
+				<groupId>com.aoapps</groupId><artifactId>ao-encoding</artifactId><version>5.0.2${POST-SNAPSHOT}</version>
 			</dependency>
 			<dependency>
 				<groupId>com.aoapps</groupId><artifactId>ao-fluent-html-any</artifactId><version>0.5.3-SNAPSHOT<!-- ${POST-SNAPSHOT} --></version>
