--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@ along with semanticcms-section-bom.  If not, see <https://www.gnu.org/licenses/>
     <sonar.host.url>https://sonarcloud.io</sonar.host.url>
   </properties>
 
-  <name>SemanticCMS Section BOM²</name>
+  <name>SemanticCMS Section BOM</name>
   <url>https://semanticcms.com/section/bom/</url>
   <description>Bill of Materials (BOM) for SemanticCMS Section features.</description>
   <inceptionYear>2019</inceptionYear>
